editando arquivos de blog, index, ferramentas, graficos

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,13 +13,17 @@
 
 
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{{ '/#about' | prepend: site.baseurl }}" title="Sobre">
-              Sobre</a>
+            <a class="nav-link js-scroll-trigger" href="{{ '/#home' | prepend: site.baseurl }}" title="Home">
+              Home</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{{ '/#institution' | prepend: site.baseurl }}" title="Instituição">
+              Instituição</a>
+          </li>
 
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{{ '/#the-work' | prepend: site.baseurl }}" title="The Work">
+            <a class="nav-link js-scroll-trigger" href="{{ '/#the-work' | prepend: site.baseurl }}" title="O Trabalho">
               O Trabalho</a>
           </li>
 
