--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
     <link rel=”alternate” href=”{{ site.url }}” hreflang=”pt-br” />
 
-    <link rel="icon" type="image/png" href="{{ '/imgs/logo-fav-victor.png' | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{ '/imgs/logo-icon-gruposeo.png' | prepend: site.baseurl }}">
 
     <!-- Bootstrap core CSS -->
     <link href="{{ '/vendor/bootstrap/css/bootstrap.min.css' | prepend: site.baseurl }}" rel="stylesheet">
